--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -1,292 +1,424 @@
-.companyHomeContainer{
+.companyHomeContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .homeNavbar {
+    display: flex;
+    box-sizing: border-box;
+    padding: 30px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .homeNavbar{
-        display: flex;
-        box-sizing: border-box;
-        padding: 30px;
-        width: 100%;
-        
-        justify-content:space-around;
-        background-color: #00000055;
-        div{
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            cursor: pointer;
-            transition: transform 0.5s ease; 
-            &:hover {
-              transform:scale(1.1);
-            }
-        }
-    }
-    .selectedSection{
-        width: 80%;
-        margin-top: 50px;
-        .workerRolesContainer{
-            
-            width: 100%;
-            background-color: #00000055;
-            box-sizing: border-box;
-            padding: 20px;
-            .createRoleBtnContainer{
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                padding: 10px;
-                button{
-                    background-color: rgb(13, 212, 13);
-            border: none;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            box-sizing: border-box;
-            padding: 10px 30px 10px 30px;
-            border-radius: 30px;
-            cursor: pointer;  
-                }
-            }
-            .workerRoleItem{
-                display: flex;
-                width: 100%;
-                color: #ffffff;
-                margin-bottom: 10px;
-                font-size: 18px;
-                border: 1px solid #ffffff;
-                border-radius: 30px;
-                .workerRoleNameColumn{
-                    box-sizing: border-box;
-                    width: 50%;
-                    padding: 10px 0px 10px 5px;
-                    font-size: 22px;
-                    text-align: center;
-                }
-                .workerRoleSalaryColumn{
-                    box-sizing: border-box;
-                    font-size: 22px;
-                    width: 50%;
-                    padding: 10px 0px 10px 5px;
-                    text-align: center;
-                }
-                .workerRoleName{
-                    box-sizing: border-box;
-                    width: 50%;
-                    padding: 10px;
-                    border-right: 1px solid #ffffff;
-                    text-align: center;
-                }
-                .workerRoleSalary{
-                    box-sizing: border-box;
-                    width: 30%;
-                    padding: 10px;
-                    text-align: center;
-                }
-                .deleteRole{
-                    margin-left: auto;
-                    background-color: rgb(192, 31, 31);
-                    color: #ffffff;
-                    border: none;
-                    border-radius: 0px 30px 30px 0px;
-                    padding: 0px 10px 0px 10px;
-                    cursor: pointer;
-                }
-                .editRole{
-                    margin-left: auto;
-                    background-color: rgb(20, 60, 221);
-                    color: #ffffff;
-                    border: none;
-                    border-radius: 30px 0px 0px 30px;
-                    padding: 0px 10px 0px 10px;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
- 
-}
 
-.deleteModla{
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 30px;
-    font-weight: 700;
-    .btns{
-        margin-top: 50px;
-        display: flex;
-        width: 300px;
-        justify-content: space-around;
-        .buttonNo{
-            background-color: rgb(13, 212, 13);
-            border: none;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            box-sizing: border-box;
-            padding: 10px 30px 10px 30px;
-            border-radius: 30px;
-            cursor: pointer;
-        }
-        .buttonYes{
-            background-color: rgb(234, 7, 7);
-            border: none;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            box-sizing: border-box;
-            padding: 10px 30px 10px 30px;
-            border-radius: 30px;
-            cursor: pointer;
-        }
+    justify-content: space-around;
+    background-color: #00000055;
+    div {
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: transform 0.5s ease;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
-}
-.createRoleModla{
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 30px;
-    font-weight: 700;
-    .inputContainer{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 15px;
+  }
+  .selectedSection {
+    width: 80%;
+    margin-top: 50px;
+    .workerRolesContainer {
+      width: 100%;
+      background-color: #00000055;
+      box-sizing: border-box;
+      padding: 20px;
+      .createRoleBtnContainer {
         width: 100%;
-        label{
-            width: 80%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 20px;
-            font-size: 16px;
-            input{
-                width: 100%;
-                height: 30px;
-                margin-top: 5px;
-                border-radius: 30px;
-                padding-left: 20px;
-            }
-            select{
-                width: 100%;
-                height: 30px;
-                margin-top: 5px;
-                border-radius: 30px;
-                padding-left: 20px;
-            }
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+        button {
+          background-color: rgb(13, 212, 13);
+          border: none;
+          color: #ffffff;
+          font-size: 20px;
+          font-weight: 700;
+          box-sizing: border-box;
+          padding: 10px 30px 10px 30px;
+          border-radius: 30px;
+          cursor: pointer;
         }
-  
-    }
-    .createBtn{
-        background-color: rgb(13, 212, 13);
-        border: none;
+      }
+      .workerRoleItem {
+        display: flex;
+        width: 100%;
         color: #ffffff;
-        font-size: 20px;
-        font-weight: 700;
-        box-sizing: border-box;
-        padding: 10px 30px 10px 30px;
+        margin-bottom: 10px;
+        font-size: 18px;
+        border: 1px solid #ffffff;
         border-radius: 30px;
-        cursor: pointer;
+        .workerRoleNameColumn {
+          box-sizing: border-box;
+          width: 50%;
+          padding: 10px 0px 10px 5px;
+          font-size: 22px;
+          text-align: center;
+        }
+        .workerRoleSalaryColumn {
+          box-sizing: border-box;
+          font-size: 22px;
+          width: 50%;
+          padding: 10px 0px 10px 5px;
+          text-align: center;
+        }
+        .workerRoleName {
+          box-sizing: border-box;
+          width: 50%;
+          padding: 10px;
+          border-right: 1px solid #ffffff;
+          text-align: center;
+        }
+        .workerRoleSalary {
+          box-sizing: border-box;
+          width: 30%;
+          padding: 10px;
+          text-align: center;
+        }
+        .deleteRole {
+          margin-left: auto;
+          background-color: rgb(192, 31, 31);
+          color: #ffffff;
+          border: none;
+          border-radius: 0px 30px 30px 0px;
+          padding: 0px 10px 0px 10px;
+          cursor: pointer;
+        }
+        .editRole {
+          margin-left: auto;
+          background-color: rgb(20, 60, 221);
+          color: #ffffff;
+          border: none;
+          border-radius: 30px 0px 0px 30px;
+          padding: 0px 10px 0px 10px;
+          cursor: pointer;
+        }
+      }
     }
+  }
 }
 
-.workerHomeContainer{
+.deleteModla {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 700;
+  .btns {
+    margin-top: 50px;
+    display: flex;
+    width: 300px;
+    justify-content: space-around;
+    .buttonNo {
+      background-color: rgb(13, 212, 13);
+      border: none;
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 700;
+      box-sizing: border-box;
+      padding: 10px 30px 10px 30px;
+      border-radius: 30px;
+      cursor: pointer;
+    }
+    .buttonYes {
+      background-color: rgb(234, 7, 7);
+      border: none;
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 700;
+      box-sizing: border-box;
+      padding: 10px 30px 10px 30px;
+      border-radius: 30px;
+      cursor: pointer;
+    }
+  }
+}
+.createRoleModla {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 700;
+  .inputContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+    width: 100%;
+    label {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+      font-size: 16px;
+      input {
+        width: 100%;
+        height: 30px;
+        margin-top: 5px;
+        border-radius: 30px;
+        padding-left: 20px;
+      }
+      select {
+        width: 100%;
+        height: 30px;
+        margin-top: 5px;
+        border-radius: 30px;
+        padding-left: 20px;
+      }
+    }
+  }
+  .createBtn {
+    background-color: rgb(13, 212, 13);
+    border: none;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 700;
+    box-sizing: border-box;
+    padding: 10px 30px 10px 30px;
+    border-radius: 30px;
+    cursor: pointer;
+  }
+}
+
+.workerHomeContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .loader1 {
+    width: 60px;
+    height: 60px;
+    border: 5px solid #ffffff;
+    border-radius: 50%;
+    margin-top: 15px;
+    animation: loader1 2s infinite;
+    @keyframes loader1 {
+      0% {
+        transform: translateY(0px) scale(1);
+      }
+      50% {
+        transform: translateY(100px) scale(0.5);
+      }
+      100% {
+        transform: translateY(0px) scale(1);
+      }
+    }
+    &.hidden {
+      display: none;
+    }
+  }
+  .loader2 {
+    width: 60px;
+    height: 60px;
+    border: 5px solid #ffffff;
+    margin-top: 15px;
+    border-radius: 50%;
+    animation: loader2 2s infinite;
+    @keyframes loader2 {
+      0% {
+        transform: translateY(0px) scale(1);
+      }
+      50% {
+        transform: translateY(-100px) scale(0.5);
+      }
+      100% {
+        transform: translateY(0px) scale(1);
+      }
+    }
+    &.hidden {
+      display: none;
+    }
+  }
+  .startBtn {
+    background-color: rgb(13, 212, 13);
+    border: none;
+    box-sizing: border-box;
+    padding: 20px 40px 20px 40px;
+    border-radius: 30px;
+    color: #ffffff;
+    font-size: 24px;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+  .endBtn {
+    background-color: rgb(255, 4, 4);
+    border: none;
+    box-sizing: border-box;
+    padding: 20px 40px 20px 40px;
+    border-radius: 30px;
+    color: #ffffff;
+    font-size: 24px;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+  .outBtn {
+    margin-top: 50px;
+    background-color: rgb(4, 92, 255);
+    border: none;
+    box-sizing: border-box;
+    padding: 20px 40px 20px 40px;
+    border-radius: 30px;
+    color: #ffffff;
+    font-size: 18px;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+}
+
+.workHoursContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  .selectContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    .years {
+      border-radius: 10px 10px 0 0;
+      box-sizing: border-box;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-right: 20px;
+    }
+    .months {
+      border-radius: 10px 10px 0 0;
+      box-sizing: border-box;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-right: 20px;
+    }
+    .selectBtn {
+      background-color: rgb(13, 212, 13);
+      border: none;
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 700;
+      box-sizing: border-box;
+      padding: 10px 30px 10px 30px;
+      border-radius: 30px;
+      cursor: pointer;
+    }
+  }
+  .workerHoursItemHeader {
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 30px;
+    width: 100%;
+    margin-bottom: 10px;
+    display: flex;
+    color: #ffffff;
+    .hours, .name,
+    .totalPay {
+      width: 30%;
+      text-align: center;
+    }
+  }
+  .workerHoursItem {
+    background-color: #00000050;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 30px;
+    width: 100%;
+    display: flex;
+    color: #ffffff;
+    margin-bottom: 10px;
+    .name {
+      width: 30%;
+      text-align: center;
+      cursor: pointer;
+    }
+    .hours,
+    .totalPay {
+      width: 30%;
+      text-align: center;
+    }
+  }
+  .workerModal {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .loader1{
-        width: 60px;
-        height: 60px;
-        border: 5px solid #ffffff;
-        border-radius: 50%;
-        margin-top: 15px;
-        animation: loader1 2s infinite;
-        @keyframes loader1 {
-            0% {
-                transform: translateY(0px) scale(1)
-            }
-            50%{
-                transform: translateY(100px) scale(0.5)
-            }
-            100% {
-                transform: translateY(0px) scale(1)
-            }
-        }
-        &.hidden{
-            display: none;
-        }
+    overflow: auto;
+    box-sizing: border-box;
+    padding: 30px;
+    background: linear-gradient(
+      to right,
+      #0f2027,
+      #203a43,
+      #2c5364
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    &.hidden {
+      display: none;
     }
-    .loader2{
-        width: 60px;
-        height: 60px;
-        border: 5px solid #ffffff;
-        margin-top: 15px;
-        border-radius: 50%;
-        animation: loader2 2s infinite;
-        @keyframes loader2 {
-            0% {
-                transform: translateY(0px) scale(1)
-            }
-            50%{
-                transform: translateY(-100px) scale(0.5)
-            }
-            100% {
-                transform: translateY(0px) scale(1)
-            }
-        }
-        &.hidden{
-            display: none;
-        }
+    .backBtn {
+      color: #ffffff;
+      font-size: 20px;
+      cursor: pointer;
     }
-    .startBtn{
-        background-color: rgb(13, 212, 13);
-        border: none;
-        box-sizing: border-box;
-        padding: 20px 40px 20px 40px;
+    .infoContainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      .workerHoursHeader {
+        padding: 10px;
         border-radius: 30px;
+        width: 100%;
+        display: flex;
         color: #ffffff;
-        font-size: 24px;
-        cursor: pointer;
-        transition: transform 0.5s ease;
-        &:hover{
-            transform: scale(1.2);
+        border: 1px solid #ffffff;
+        margin-bottom: 10px;
+        margin-top: 20px;
+        .name {
+          width: 30%;
         }
-    }
-    .endBtn{
-        background-color: rgb(255, 4, 4);
-        border: none;
+        .time {
+          width: 30%;
+          text-align: center;
+        }
+      }
+      .workerHours {
+        background-color: #00000050;
         box-sizing: border-box;
-        padding: 20px 40px 20px 40px;
+        padding: 10px;
         border-radius: 30px;
+        width: 100%;
+        display: flex;
         color: #ffffff;
-        font-size: 24px;
-        cursor: pointer;
-        transition: transform 0.5s ease;
-        &:hover{
-            transform: scale(1.2);
+        margin-bottom: 10px;
+        .name {
+          width: 30%;
         }
-    }
-    .outBtn{
-        margin-top: 50px;
-        background-color: rgb(4, 92, 255);
-        border: none;
-        box-sizing: border-box;
-        padding: 20px 40px 20px 40px;
-        border-radius: 30px;
-        color: #ffffff;
-        font-size: 18px;
-        cursor: pointer;
-        transition: transform 0.5s ease;
-        &:hover{
-            transform: scale(1.2);
+        .time {
+          width: 30%;
+          text-align: center;
         }
+      }
     }
+  }
 }
